Further reduced code

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -2,13 +2,8 @@ defaults:
   - _self_
 
 num_opt_samples: 50
-num_folds: 3
-num_cpus: 4
-num_gpus: 1
-seed: 1
-
-lr: 0.01
-weight_decay: 0.0005
+cpus_per_trial: 2
+gpus_per_trial: 0.5
 
 output_dir: ./output/
 hydra:
