--- a/cfg.yaml
+++ b/cfg.yaml
@@ -2,8 +2,10 @@ defaults:
   - _self_
 
 num_opt_samples: 50
-cpus_per_trial: 2
-gpus_per_trial: 0.5
+num_cpus: 16
+num_cpus_per_trial: 4
+num_gpus: 1
+num_gpus_per_trial: 0.25
 
 output_dir: ./output/
 hydra:
